#3711# Locale updates for OCS 2.3

--- a/locale/es_AR/admin.xml
+++ b/locale/es_AR/admin.xml
@@ -79,4 +79,7 @@
 	<message key="admin.version.updateAvailable">Hay disponible una versión actualizada</message>
 	<message key="admin.version.upToDate">Su sistema está actualizado</message>
 	<message key="admin.version">Versión</message>
+	<message key="admin.settings.homeHeaderImage.altText">Logo del sitio</message>
+	<message key="admin.settings.homeHeaderImageInvalid">Formato del logo del sitio inválido. Los formatos aceptados son .gif, .jpg o .png</message>
+	<message key="admin.settings.siteStyleSheetInvalid">Formato de hoja de estilos inválido. El formato aceptado es .css</message>
 </locale>
