--- a/locale/es_AR/user.xml
+++ b/locale/es_AR/user.xml
@@ -85,4 +85,21 @@
 	<message key="user.userHome">Inicio Usuario</message>
 	<message key="user.username">Nombre de usuario</message>
 	<message key="user.workingLanguages">Idiomas de trabajo</message>
+	<message key="user.profile.form.profileImageInvalid">Formato de imagen de perfil inválido o imagen demasiado grande. Los formatos aceptados son .gif, .jpg o .png y la imagen no debe exceder los 150x150 píxeles</message>
+	<message key="user.login.accountNotValidated">Su dirección de email no ha sido validada. Por favor verifique su email y siga las instrucciones provistas. Si usted no ha recibido un correo, podría necesitar contactar al administrador del sitio para asistencvia</message>
+	<message key="user.login.activate">Activar cuenta</message>
+	<message key="user.login.activated">Graciar por actuvar su cuenta. Ahora puede ingresar utilizando las credenciales que ha ingresao al crear su cuenta</message>
+	<message key="user.other">Otro</message>
+	<message key="user.profile.form.profileImage">Imagen del perfil</message>
+	<message key="user.profile.form.urlInvalid">La URL especificada no es válida. Por favor verifique la URL e intente nuevamente (Ayuda: intente agregar http:// al comienzo de la URL)</message>
+	<message key="user.profile.publicProfile">Perfil del Usuario</message>
+	<message key="user.register.form.emailExists">La dirección de correo seleccionada ya está en uso por otro usuario</message>
+	<message key="user.register.form.passwordsDoNotMatch">Las contraseñas no coinciden</message>
+	<message key="user.register.form.usernameAlphaNumeric">El nombre de usuario puede contener solo caracteres alfanuméricos, guiones bajos y guiones comunes, y debe comenzar y terminar con un caracter alfanumérico.</message>
+	<message key="user.register.form.usernameExists">El nombre de usuario seleccionar ya está en uso</message>
+	<message key="user.register.passwordLengthRestriction">La contraseña debe contenar como mínimo {$length} caracteres.</message>
+	<message key="user.register.registerAs">Registrarse como</message>
+	<message key="user.register">Registrar</message>
+	<message key="user.register.usernameRestriction">El nombre de usuario debe contener solo letras minúsculas, números y guiones/guiones bajos</message>
+	<message key="user.register.completeForm">Complete este formulario para registrarse a esta revista</message>
 </locale>
