--- a/locale/fr_CA/common.xml
+++ b/locale/fr_CA/common.xml
@@ -29,7 +29,7 @@
 	<message key="announcement.moreAnnouncements">Encore plus d'annonces...</message>
 	<message key="announcement.noneExist">Aucune annonce n'a été publiée.</message>
 	<message key="announcement.posted">Publié</message>
-	<message key="announcement.viewLink">Encore plus...</message>
+	<message key="announcement.viewLink">Plus...</message>
 	<message key="announcement.view">Voir l'annonce</message>
 	<message key="common.copy">Copier</message>
 	<message key="common.preview">Aperçu</message>
@@ -53,7 +53,7 @@
 	<message key="common.cancel">Annuler</message>
 	<message key="common.cancelled">Annulé</message>
 	<message key="common.captchaField.altText">Image de validation</message>
-	<message key="common.captchaField.badCaptcha">Les caractères que vous avez entrés ne correspondent pas aux caractères dans l'image. Veuillez vérifier les caractères et d'essayer de nouveau.</message>
+	<message key="common.captchaField.badCaptcha">Les caractères que vous avez saisis ne correspondent pas aux caractères dans l'image. Veuillez vérifier les caractères et essayer de nouveau.</message>
 	<message key="common.captchaField.description">Veuillez saisir les lettres telles qu'elles apparaissent dans l'image au-dessus.</message>
 	<message key="common.captchaField">Validation</message>
 	<message key="common.changesSaved">Les changements effectués ont été enregistrés.</message>
@@ -124,7 +124,7 @@
 	<message key="common.pageHeaderLogo.altText">Logo de l'en-tête de la page</message>
 	<message key="common.plugin">Plugiciel</message>
 	<message key="common.publisher">Éditeur</message>
-	<message key="common.record">Enregistrer</message>
+	<message key="common.record">Consigner</message>
 	<message key="common.related">Connexe</message>
 	<message key="common.remove">Supprimer</message>
 	<message key="common.removeSelection">Supprimer la sélection</message>
@@ -163,7 +163,7 @@
 	<message key="common.yes">Oui</message>
 	<message key="debug.databaseQueries">Nombre de requêtes de la base de données</message>
 	<message key="debug.executionTime">Page créée en</message>
-	<message key="debug.memoryUsage">Utilisation de la mémoire :</message>
+	<message key="debug.memoryUsage">Utilisation de la mémoire</message>
 	<message key="debug.notes.localeListLoad">Liste de langue "{$localeList}" chargée à partir du XML</message>
 	<message key="debug.notes.localeLoad">Fichier de langue "{$localeFile}" chargé à partir du XML</message>
 	<message key="debug.notes.missingLocaleKey">Clé de langue manquante "{$key}".</message>
@@ -308,10 +308,11 @@
 	<message key="notification.subscribeError">Votre adresse de courriel est déjà abonnée aux avis.</message>
 	<message key="notification.subscribeSuccess">Un courriel a été envoyé à l'adresse spécifiée. Veuillez cliquer sur le lien de confirmation dans le courriel pour vous ajouter à la liste de diffusion.</message>
 	<message key="notification.reminderError">Il s'est produit une erreur lors de l'envoi de votre mot de passe. Veuillez vous assurer que vous avez saisi votre adresse de courriel correctement.</message>
-	<message key="notification.reminderSent">Votre nouveau mot de passe a été envoyé à l'adresse de courriel indiquée.</message>
+	<message key="notification.reminderSent">Votre nouveau mot de passe a été envoyé à l'adresse de courriel fournie.</message>
 	<message key="notification.unsubscribe">Se désabonner</message>
 	<message key="notification.unsubscribeDescription">Saisir votre adresse de courriel et mot de passe ci-dessous pour vous désabonner des avis par courriel. Si vous ne souvenez pas de votre mot de passe, laisser le champ vide et un nouveau mot de passe vous sera envoyé par courriel à l'adresse de courriel indiquée.</message>
 	<message key="notification.unsubscribeError">Il s'est produit une erreur lors de votre désabonnement. Veuillez vous assurer que votre adresse de courriel et votre mot de passe sont corrects.</message>
 	<message key="notification.unsubscribeSuccess">Vous avez été désabonné avec succès.</message>
 	<message key="common.uploadFailed">Le fichier n'a pu être téléchargé. Veuillez essayer de nouveau ou communiquer avec l'administrateur si le problème persiste.</message>
+	<message key="navigation.dashboard">Tableau de bord</message>
 </locale>
