--- a/locale/en_US/common.xml
+++ b/locale/en_US/common.xml
@@ -100,6 +100,7 @@
 	<message key="common.event">Event</message>
 	<message key="common.export">Export</message>
 	<message key="common.re">Re:</message>
+	<message key="common.false">False</message>
 	<message key="common.file">File</message>
 	<message key="common.fileName">File name</message>
 	<message key="common.fileSize">File size</message>
@@ -163,6 +164,7 @@
 	<message key="common.suggest">Suggest</message>
 	<message key="common.title">Title</message>
 	<message key="common.top">Top</message>
+	<message key="common.true">True</message>
 	<message key="common.type">Type</message>
 	<message key="common.uninitiated">Uninitiated</message>
 	<message key="common.untitled">Untitled</message>
