--- a/locale/en_US/submission.xml
+++ b/locale/en_US/submission.xml
@@ -20,6 +20,7 @@
 	<message key="submission.ask">Ask</message>
 	<message key="submission.backToSubmissionEditing">Back to Submission Editing</message>
 	<message key="submission.changeComments">Change to</message>
+	<message key="submission.citations">References</message>
 	<message key="submission.comments.addComment">Add Comment</message>
 	<message key="submission.comments.comments">Comments</message>
 	<message key="submission.comments.confirmDelete">Are you sure you would like to delete this comment?</message>
@@ -164,4 +165,7 @@
 	<message key="submission.uploadFileTo">Upload file to</message>
 	<message key="submission.viewMetadata">View Metadata</message>
 	<message key="submission.views">Views</message>
+	
+	<!-- Author Submission -->
+	<message key="author.submit.submissionCitations">Provide a formatted list of references for works cited in this submission.</message>
 </locale>
