--- a/locale/el_GR/submission.xml
+++ b/locale/el_GR/submission.xml
@@ -13,6 +13,7 @@
   -->
 
 <locale name="el_GR" full_name="Greek">
+	<message key="submission.agencies">ΦορείςΓραφεία</message>
 	<message key="submission.abstractViews">Προβολές Περίληψης</message>
 	<message key="submission.accepted">Δεκτό</message>
 	<message key="submission.acknowledge">Ελήφθη</message>
