--- a/locale/ja_JP/submission.xml
+++ b/locale/ja_JP/submission.xml
@@ -13,6 +13,7 @@
   -->
 
 <locale name="ja_JP" full_name = "日本語">
+	<message key="submission.agencies">機関</message>
 	<message key="submission.abstractViews">要旨を読む</message>
 	<message key="submission.accepted">採用</message>
 	<message key="submission.acknowledge">お礼</message>
