--- a/locale/cs_CZ/submission.xml
+++ b/locale/cs_CZ/submission.xml
@@ -13,6 +13,7 @@
   -->
 
 <locale name="cs_CZ" full_name = "Czech">
+	<message key="submission.agencies">Agentury</message>
 	<message key="submission.abstractViews">Zobrazení abstraktu</message>
 	<message key="submission.accepted">Přijat</message>
 	<message key="submission.acknowledge">Poděkovat</message>
