--- a/locale/fr_CA/submission.xml
+++ b/locale/fr_CA/submission.xml
@@ -13,6 +13,7 @@
   -->
 
 <locale name="fr_CA" full_name = "Français (Canada)">
+	<message key="submission.agencies">Organismes</message>
 	<message key="submission.abstractViews">Vues des résumés</message>
 	<message key="submission.accepted">Accepté</message>
 	<message key="submission.acknowledge">Envoyer un accusé de réception</message>
