--- a/locale/it_IT/submission.xml
+++ b/locale/it_IT/submission.xml
@@ -13,6 +13,7 @@
   -->
 
 <locale name="it_IT" full_name = "Italiano">
+	<message key="submission.agencies">Organizzazioni</message>
 	<message key="submission.abstractViews">Viste dell'Abstract</message>
 	<message key="submission.accepted">Accetta</message>
 	<message key="submission.acknowledge">Ringraziamenti</message>
