--- a/locale/no_NO/submission.xml
+++ b/locale/no_NO/submission.xml
@@ -13,6 +13,7 @@
   -->
 
 <locale name="no_NO" full_name = "Norwegian">
+	<message key="submission.agencies">Kilder til støtte</message>
 	<message key="submission.abstractViews">Sammendrag av synspunkt</message>
 	<message key="submission.accepted">Akseptert</message>
 	<message key="submission.acknowledge">Bekreft</message>
