--- a/locale/tr_TR/submission.xml
+++ b/locale/tr_TR/submission.xml
@@ -13,6 +13,7 @@
   -->
 
 <locale name="tr_TR" full_name = "Türkiye Türkçesi">
+	<message key="submission.agencies">Kuruluşlar</message>
 	<message key="submission.abstractViews">Özet Fikirleri</message>
 	<message key="submission.accepted">Kabul edildi</message>
 	<message key="submission.acknowledge">Onaylama</message>
