--- a/locale/vi_VN/submission.xml
+++ b/locale/vi_VN/submission.xml
@@ -13,6 +13,7 @@
   -->
 
 <locale name="vi_VN" full_name = "Tiếng Việt">
+	<message key="submission.agencies">Cơ quan</message>
 	<message key="submission.abstractViews">Lượt xem Tóm tắt</message>
 	<message key="submission.accepted">Chấp thuận</message>
 	<message key="submission.acknowledge">Báo đã nhận</message>
